Revision history for perl distribution Convos

7.03 Not Released
 - Changed chat input menu to be visible on big screens
 - Fix showing the same user icon in the sidebar as in the chat for CamelCaseNick
 - Fix picking icons for nicks containing just numbers
 - Fix being able to jump from conversation to server settings in sidebar
 - Fix showing the same icon in the sidebar as in the chat
 - Updated FontAwesome to 5.15.4
 - Updated Node dependencies
 - Updated nick popover animation
 - Add <ChatMessage/> component

7.02 2022-04-26T11:51:00+0900
 - Fix "recover" sub command
 - Fix not including ")" in links
 - Improved guessing Convos video links

7.01 2022-03-17T08:36:00+0900
 - Fix creating connection when using Convos::Plugin::Auth::Header #696
 - Fix loading /events when using Convos::Plugin::Auth::Header #704

7.00 2022-03-13T17:39:00+0900
 - Bumped required Perl to 5.20
 - Changed to using async/await in the Perl code
 - Changed "raw messages" to a persistent setting
 - Add Convos::Plugin::Auth::Header #696
 - Add styling for more user modes: "admin", "bot" and "half operator"
 - Replaced backend.user helper to user.load_p
 - Brought back Convos::Plugin::Paste to simplify overriding multiline message handling
 - Fix not hiding the sidebar settings when scrolling up #689
 - Going to ignore pull requests from "dependabot" in Convos::Plugin::Bot::Action::Github
 - Highlights since 6.00
   * Add /shrug command
   * Add Dracula and GNOME color theme
   * Add arm64 docker image
   * Add better feedback in case TLS settings are incorrect
   * Add connection profiles
   * Add handler for irc:// links
   * Add handling of AWAY
   * Add management of paste and uploaded files
   * Add notification sound
   * Add support for Github Webhooks, through the bot system
   * Add support for logging to syslog
   * Add support for raw messages
   * Add support for rendering IRC colors and formatting
   * Changed from freenode to https://libera.chat